Fix overflow header image

--- a/sass/branding/_branding.scss
+++ b/sass/branding/_branding.scss
@@ -14,6 +14,7 @@
 	//z-index: -1;
 	//position: relative;
 	margin-bottom: 1.5em;
+	overflow: hidden;
 }
 
 @media screen and (min-width: 1600px) {
